--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "keywords": [],
   "author": {
-    "name": "Jimmy Kim",
-    "email": "jimmy.kim@sendbird.com"
+    "name": "Jihwan Kim",
+    "email": "jimmynew1130@gmail.com"
   },
   "license": "MIT",
   "dependencies": {
